--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@ style="width: 800px; height: 700px; border: none;"></iframe>
 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
 <div class="resume-content">
 <h3 class="mb-1">Working Papers</h3>
+<p> 2023. <i>Cepaluni, Gabriel</b>, Dorsch, Michael T., and Civitarese, Jamil. <a href="http://gcepaluni.github.io/Land_Invastions_and_Contemporary_Slavery.pdf" target="_blank">Land Invasions and Contemporary Slavery.} submitted.</p>
+<p> 2023. <i>Cepaluni, Gabriel</b>, and Civitarese, Jamil. Modern-Day Slavery and the Trade of Small Weapons.</p>
+<p> 2023. <i>Cepaluni, Gabriel</b>, and Driscoll, Amanda. <a href="http://gcepaluni.github.io/BolsaFamiliaPoverty.pdf" target="_blank">Can Conditional Cash Transfer Interrupt the Cycle of Intergenerational Poverty? Lessons from a Large Administrative Data Set.} submitted.</p>
 <p> 2022. <i>Cepaluni, Gabriel</b>, Dorsch, Michael T., and Dzebo, Semir. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3816398 target="_blank">Populism, Political Regimes, and COVID-19 Deaths.} revision submitted.</p>
-<p> 2022. <i>Cepaluni, Gabriel</b>, Dorsch, Michael T., and Civitarese, Jamil. <a href="http://gcepaluni.github.io/Land_Invastions_and_Contemporary_Slavery.pdf" target="_blank">Land Invasions and Contemporary Slavery.</p>
-<p> 2022. <i>Cepaluni, Gabriel</b>, and Driscoll, Amanda. <a href="http://gcepaluni.github.io/BolsaFamiliaPoverty.pdf" target="_blank">Can Conditional Cash Transfer Interrupt the Cycle of Intergenerational Poverty? Lessons from a Large Administrative Data Set.</p>
 </div>
 </div>
 
